--- a/css/style.css
+++ b/css/style.css
@@ -1,193 +1,179 @@
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-  font-size: 15px;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    font-size: 15px;
 }
 .body {
-
- font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
-
-
 .header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: 0 auto;
-  padding: 3rem 6rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  background-color: white ;
-  height: 5.3rem;
-  z-index: 2;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: 0 auto;
+    padding: 3rem 6rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    background-color: white;
+    height: 5.3rem;
+    z-index: 2;
 }
 
 .header-invisible {
     margin: -200px 0;
-   transition: 200ms;
-
+    transition: 200ms;
 }
 
 .header-fixed {
-  margin: 0;
-  transition: 200ms;
+    margin: 0;
+    transition: 200ms;
 }
 
-
 .header a {
-  text-decoration: none;
-  color: black;
+    text-decoration: none;
+    color: black;
 }
 
 .header a:visited {
-  color: black;
+    color: black;
 }
 
 .nav-wrappper {
-  display: flex ;
-  justify-content: space-between;
-
+    display: flex;
+    justify-content: space-between;
 }
 
 .nav-item {
-  font-size: 1.5rem;
+    font-size: 1.5rem;
 }
 
 .nav-item:not(:last-child) {
-  margin-right: 8rem;
+    margin-right: 8rem;
 }
 
-
 .logo {
-font-size: 2rem;
-font-weight: 700;
+    font-size: 2rem;
+    font-weight: 700;
 }
 
 .welcome-container {
-max-width: 100%;
-overflow: hidden;
+    max-width: 100%;
+    overflow: hidden;
 }
 
-
 .welcome-content {
-  margin-top: 6rem;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+    margin-top: 6rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .header-galler {
-
-  max-width: 100%;
-  max-height: 1000px;
+    max-width: 100%;
+    max-height: 1000px;
 }
 
 .header-gallery--image {
-  max-width: 100%;
-  max-height: 100%;
-  content-visibility: cover;
+    max-width: 100%;
+    max-height: 100%;
+    content-visibility: cover;
 }
-
 
 .container {
-  margin: 0 auto;
-  width: 80% ;
-  padding: 3rem 6rem;
-  background-color: white;
+    margin: 0 auto;
+    width: 80%;
+    padding: 3rem 6rem;
+    background-color: white;
 }
 
-
 .about-content {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .about-title {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 2rem;
-  font-weight: 500;
-  text-align: center;
-  letter-spacing: 0.2rem;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 2rem;
+    font-weight: 500;
+    text-align: center;
+    letter-spacing: 0.2rem;
 }
 
 .about-text {
-  font-family: 'Courier New', Courier, monospace ;
-  font-size: 1.4rem;
-  text-align: center;
-  font-style: normal ;
-  font-weight: 200;
-  line-height: 2.6rem;
+    font-family: "Courier New", Courier, monospace;
+    font-size: 1.4rem;
+    text-align: center;
+    font-style: normal;
+    font-weight: 200;
+    line-height: 2.6rem;
 }
 
 .gallery {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 2rem;
-
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 2rem;
 }
 
 @media (max-width: 950px) {
-  .gallery {
-      grid-template-columns: repeat(2, 1fr);
-  }
+    .gallery {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 @media (max-width: 550px) {
-  .gallery {
-      grid-template-columns: repeat(1, 1fr);
-  }
+    .gallery {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
 
 .gallery-item {
-  max-width: 100%;
-  /* overflow: hidden; */
-
+    max-width: 100%;
+    /* overflow: hidden; */
 }
 
 .gallery-item--image {
-  max-width: 100%;
-  max-height: 100%;
-  cursor: pointer;
+    max-width: 100%;
+    max-height: 100%;
+    cursor: pointer;
 }
 
 .gallery-item--image:hover {
-  transform: translateY(-0.1rem) translateX(-0.1rem);
-box-shadow: 0.4rem 0.4rem 2rem 0.1rem rgba(0, 0, 0, 0.15) ;
-  transition: 300ms ease-in;
+    transform: translateY(-0.1rem) translateX(-0.1rem);
+    box-shadow: 0.4rem 0.4rem 2rem 0.1rem rgba(0, 0, 0, 0.15);
+    transition: 300ms ease-in;
 }
 
 .gallery-item--image__horizontal {
-  grid-column: span 2;
+    grid-column: span 2;
 }
 
 .modal-about {
-  z-index: 2;
-  visibility: hidden;
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(0, 0, 0, 0.9);
-  margin-top: -1px;
+    z-index: 2;
+    visibility: hidden;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.9);
+    margin-top: -1px;
 }
 
-
 .modal-about img {
-  max-width: 90%;
-  max-height: 90%;
+    max-width: 90%;
+    max-height: 90%;
 }
 
 .modal-about--visible {
-  visibility: visible;
-
+    visibility: visible;
 }
 
 /* .arrow {
