--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+.light {
+  --foreground-color: #000000;
+  --background-color: #ffffff;
+}
+
+.dark {
+    --background-color: #121212;
+    --foreground-color: #ffffff;
+}
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -6,9 +16,12 @@
     list-style: none;
 }
 
-.body {
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+body {
+    background-color: var(--background-color);
+}
+
+h1 {
+    color: var(--foreground-color);
 }
 
 /* Header navigration */
@@ -25,7 +38,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    background-color: white;
+    background-color: var(--background-color);
     height: fit-content;
     z-index: 2;
 }
@@ -42,11 +55,11 @@
 
 .header a {
     text-decoration: none;
-    color: black;
+    color: var(--foreground-color);
 }
 
 .header a:visited {
-    color: black;
+    color: var(--foreground-color);
 }
 
 .menu {
@@ -71,6 +84,7 @@
 .logo {
     font-size: 2rem;
     font-weight: 700;
+    display: block;
 }
 
 .icon {
@@ -96,7 +110,7 @@
     .nav-responsive {
         display: block;
         position: fixed;
-        background-color: white;
+        background-color: var(--background-color);
         margin: 0;
         right: 0;
         left: 0;
@@ -108,6 +122,11 @@
 .contact-me {
     display: block;
     position: relative;
+}
+
+.dark-theme {
+    cursor: pointer;
+    color: var(--foreground-color);
 }
 
 /* Welcome Photos */
@@ -138,7 +157,7 @@
     margin: 0 auto;
     width: 80%;
     padding: 3rem 6rem;
-    background-color: white;
+    background-color: var(--background-color);
 }
 
 .about-content {
@@ -162,6 +181,7 @@
     font-style: normal;
     font-weight: 200;
     line-height: 2.6rem;
+    color: var(--foreground-color);
 }
 
 .gallery {
@@ -227,7 +247,7 @@
     visibility: visible;
 }
 
-.left {
+.previous {
     width: 100px;
     border: solid rgb(84, 84, 84);
     border-width: 0 0.3rem 0.3rem 0;
@@ -244,7 +264,7 @@
     -webkit-transform: rotate(135deg);
 }
 
-.right {
+.next {
     width: 100px;
     border: solid rgb(84, 84, 84);
     border-width: 0 0.3rem 0.3rem 0;
