--- a/css/style.css
+++ b/css/style.css
@@ -238,45 +238,73 @@ h1 {
     margin-top: -1px;
 }
 
-.modal-about img {
-    max-width: 90%;
-    max-height: 90%;
+.modal-image--wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.modal-image--wrapper::before {
+  content:"";
+  width: 100px;
+  border: solid rgb(84, 84, 84);
+  border-width: 0 0.3rem 0.3rem 0;
+  display: inline-block;
+  padding: 3px;
+  width: 2rem;
+  height: 2rem;
+  position: fixed;
+  top: 50%;
+  left: 25%;
+  cursor: pointer;
+  z-index: 100;
+  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+}
+
 
 .modal-about--visible {
     visibility: visible;
 }
 
+.modalImg {
+  max-width: 90vw;
+  max-height: 90vh;
+  display: block;
+}
+
 .previous {
-    width: 100px;
-    border: solid rgb(84, 84, 84);
-    border-width: 0 0.3rem 0.3rem 0;
-    display: inline-block;
-    padding: 3px;
-    width: 2rem;
-    height: 2rem;
-    position: fixed;
-    top: 50%;
-    left: 25%;
-    cursor: pointer;
-    z-index: 100;
-    transform: rotate(135deg);
-    -webkit-transform: rotate(135deg);
+  width: 100px;
+  border: solid rgb(84, 84, 84);
+  border-width: 0 0.3rem 0.3rem 0;
+  display: inline-block;
+  padding: 3px;
+  width: 2rem;
+  height: 2rem;
+  position: fixed;
+  top: 50%;
+  left: 25%;
+  cursor: pointer;
+  z-index: 100;
+  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
 }
 
 .next {
-    width: 100px;
-    border: solid rgb(84, 84, 84);
-    border-width: 0 0.3rem 0.3rem 0;
-    display: inline-block;
-    padding: 3px;
-    width: 2rem;
-    height: 2rem;
-    position: fixed;
-    top: 50%;
-    left: 75%;
-    cursor: pointer;
-    z-index: 100;
-    transform: rotate(-45deg);
-    -webkit-transform: rotate(-45deg);
+  width: 100px;
+  border: solid rgb(84, 84, 84);
+  border-width: 0 0.3rem 0.3rem 0;
+  display: inline-block;
+  padding: 3px;
+  width: 2rem;
+  height: 2rem;
+  position: fixed;
+  top: 50%;
+  left: 75%;
+  cursor: pointer;
+  z-index: 100;
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
 }
+
+
