--- a/css/style.css
+++ b/css/style.css
@@ -238,10 +238,11 @@ h1 {
     margin-top: -1px;
 }
 
-.modal-image--wrapper {
+/* .modal-image--wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 
 .modal-image--wrapper::before {
@@ -253,14 +254,36 @@ h1 {
   padding: 3px;
   width: 2rem;
   height: 2rem;
-  position: fixed;
+  position: absolute;
   top: 50%;
-  left: 25%;
+  left: 10%;
   cursor: pointer;
   z-index: 100;
   transform: rotate(135deg);
   -webkit-transform: rotate(135deg);
 }
+
+.modal-image--wrapper::after {
+  content:"";
+  width: 100px;
+  border: solid rgb(84, 84, 84);
+  border-width: 0 0.3rem 0.3rem 0;
+  display: inline-block;
+  padding: 3px;
+  width: 2rem;
+  height: 2rem;
+  position: absolute;
+  top: 50%;
+  left: 90%;
+  cursor: pointer;
+  z-index: 100;
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+}
+
+.modal-image--wrapper::after:hover {
+  border:none;
+} */
 
 
 .modal-about--visible {
@@ -273,38 +296,5 @@ h1 {
   display: block;
 }
 
-.previous {
-  width: 100px;
-  border: solid rgb(84, 84, 84);
-  border-width: 0 0.3rem 0.3rem 0;
-  display: inline-block;
-  padding: 3px;
-  width: 2rem;
-  height: 2rem;
-  position: fixed;
-  top: 50%;
-  left: 25%;
-  cursor: pointer;
-  z-index: 100;
-  transform: rotate(135deg);
-  -webkit-transform: rotate(135deg);
-}
-
-.next {
-  width: 100px;
-  border: solid rgb(84, 84, 84);
-  border-width: 0 0.3rem 0.3rem 0;
-  display: inline-block;
-  padding: 3px;
-  width: 2rem;
-  height: 2rem;
-  position: fixed;
-  top: 50%;
-  left: 75%;
-  cursor: pointer;
-  z-index: 100;
-  transform: rotate(-45deg);
-  -webkit-transform: rotate(-45deg);
-}
 
 
