--- a/css/style.css
+++ b/css/style.css
@@ -238,56 +238,19 @@ h1 {
     margin-top: -1px;
 }
 
-/* .modal-image--wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-}
-
-.modal-image--wrapper::before {
-  content:"";
-  width: 100px;
-  border: solid rgb(84, 84, 84);
-  border-width: 0 0.3rem 0.3rem 0;
-  display: inline-block;
-  padding: 3px;
-  width: 2rem;
-  height: 2rem;
-  position: absolute;
-  top: 50%;
-  left: 10%;
-  cursor: pointer;
-  z-index: 100;
-  transform: rotate(135deg);
-  -webkit-transform: rotate(135deg);
-}
-
-.modal-image--wrapper::after {
-  content:"";
-  width: 100px;
-  border: solid rgb(84, 84, 84);
-  border-width: 0 0.3rem 0.3rem 0;
-  display: inline-block;
-  padding: 3px;
-  width: 2rem;
-  height: 2rem;
-  position: absolute;
-  top: 50%;
-  left: 90%;
-  cursor: pointer;
-  z-index: 100;
-  transform: rotate(-45deg);
-  -webkit-transform: rotate(-45deg);
+.modal-image--wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
 }
 
 .modal-image--wrapper::after:hover {
-  border:none;
-} */
-
+  border: none;
+}
 
 .modal-about--visible {
-    visibility: visible;
+  visibility: visible;
 }
 
 .modalImg {
@@ -296,5 +259,38 @@ h1 {
   display: block;
 }
 
+
+
+.hover-left::before {
+    content: "<";
+font-size: 4rem;
+
+    opacity: 0.9;
+    transition: 200ms ease-in-out;
+    display: inline-block;
+
+    position: absolute;
+    top: 50%;
+    left: 5%;
+
+    z-index: 100;
+}
+
+
+
+.hover-right::before {
+    content: ">";
+    font-size: 4rem;
+    opacity: 0.9;
+    transition-property: all;
+    transition: 200ms ease-in-out;
+    display: inline-block;
+
+    position: absolute;
+    top: 50%;
+    right: 5%;
+
+    z-index: 100;
+}
 
 
